error.txt
pathfinding.cpp: In function ‘float euclideanHeur(int, int, const Graph&)’:
pathfinding.cpp:90:17: error: ‘sqrt’ is not a member of ‘std’; did you mean ‘sort’?
   90 |     return std::sqrt(d.x * d.x + d.y * d.y);
      |                 ^~~~
      |                 sort
pathfinding.cpp: In function ‘float clusterHeur(int, int, const Graph&)’:
pathfinding.cpp:108:46: warning: unused parameter ‘g’ [-Wunused-parameter]
  108 | float clusterHeur(int u, int v, const Graph& g) {
      |                                 ~~~~~~~~~~~~~^
pathfinding.cpp: In function ‘void analyzeHeur(const Graph&, Heuristic, bool)’:
pathfinding.cpp:118:10: error: ‘mt19937’ is not a member of ‘std’
  118 |     std::mt19937 gen(std::random_device{}());
      |          ^~~~~~~
pathfinding.cpp:118:43: error: expected primary-expression before ‘)’ token
  118 |     std::mt19937 gen(std::random_device{}());
      |                                           ^
pathfinding.cpp:121:21: error: ‘gen’ was not declared in this scope
  121 |         int s = dis(gen), goal = dis(gen);
      |                     ^~~
pathfinding.cpp:123:36: error: ‘goal’ was not declared in this scope
  123 |         auto path = dijkstra(g, s, goal, m); // true dist
      |                                    ^~~~
make: *** [Makefile:55: pathfinding.o] Error 1
